# emissions

./: .gitignore  _publish.yml  check_percentages.R  co2_gtExtras.R  emissions-ods.py  emissions-owen.R  emissions-report.docx  emissions.Rproj  emissions.docx  emissions.html  emissions.qmd  emissions_1.docx  emissions_2021.R  emissions_chart_awayday.R  greenhouse_gas_emissions_evidence_base.R  lgp_chart_data.sql  library versions fix.R  motherduck.py  nov_2_2023.R  per cap emissions.R  per-cap-emissions-ca.py  per_capita_emissions.R  plot_percap_emissions.R  pre-process-excel.r  pyproject.toml  ruff.toml  sector_analysis.R  sharepoint O365.R  sub_sectors_la_control_emissions.txt  template.docx
